metric enhancements according to FindBugs