@@ -139,21 +139,21 @@ public class Color {
 	static {
 		sColorMap = new TreeMap<Integer, Integer>();
 		
-		sColorMap.put(new Integer(20),
-				new Integer(RED));
-		sColorMap.put(new Integer(45), 
-				new Integer(ORANGE));
-		sColorMap.put(new Integer(70), 
-				new Integer(YELLOW));
-		sColorMap.put(new Integer(150), 
-				new Integer(GREEN));
-		sColorMap.put(new Integer(200), 
-				new Integer(TURQUOISE));
-		sColorMap.put(new Integer(265), 
-				new Integer(BLUE));
-		sColorMap.put(new Integer(330), 
-				new Integer(PURPLE));
-		sColorMap.put(new Integer(360), 
-				new Integer(RED));
+		sColorMap.put(Integer.valueOf(20),
+				Integer.valueOf(RED));
+		sColorMap.put(Integer.valueOf(45), 
+				Integer.valueOf(ORANGE));
+		sColorMap.put(Integer.valueOf(70), 
+				Integer.valueOf(YELLOW));
+		sColorMap.put(Integer.valueOf(150), 
+				Integer.valueOf(GREEN));
+		sColorMap.put(Integer.valueOf(200), 
+				Integer.valueOf(TURQUOISE));
+		sColorMap.put(Integer.valueOf(265), 
+				Integer.valueOf(BLUE));
+		sColorMap.put(Integer.valueOf(330), 
+				Integer.valueOf(PURPLE));
+		sColorMap.put(Integer.valueOf(360), 
+				Integer.valueOf(RED));
 	}
 }
